# reformers-dt-wind-gen-fc-model

./: .gitignore  .gitlab-ci.yml  GENERATOR-MANIFEST.yml  README.md  registry-config-example.json
model-src/: Dockerfile  config.yml  pyproject.toml
model-src/default-configs/: park_alkmaar.yaml  simulation_alkmaar.yaml
model-src/default-configs/park/: park_windparkalkmaar.yaml
model-src/default-configs/turbine-types/: turbinetypes_windparkalkmaar.yaml
model-src/eolica-runtime/: __main__.py  eolica_runtime_class.py  generate_configs_from_graphdb.py  knowledge_graph_adapter.py  logger.py
